--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,12 +1,15 @@
  
   <!-- Breadcrumbs -->
+
   
   <div class="breadcrumbs">
     <div class="container">
       <div class="row">
-        <div class="col-xs-12">
-          <ul>
-            <li class="home"> <a title="Go to Home Page" href="index.html">Home</a><span>&raquo;</span></li>
+        <div class="breadcrumb_dm">
+          <ul class="breadcrumb__list">
+            <li><a href="/"><i aria-hidden="true" class="fa fa-home"></i></a> <i aria-hidden="true"
+              class="fa fa-angle-right"></i></li>
+            <li class=""><a [routerLink]="['/']" routerLinkActive="router-link-active">Trang chủ</a> <i aria-hidden="true" class="fa fa-angle-right"></i></li>
             <li><strong>About Us</strong></li>
           </ul>
         </div>
@@ -17,10 +20,11 @@
   
   <!-- Main Container -->
   
-  <div class="main container">
+  <div class="container">
  
      <div class="about-page home__intro">
-        <div class="col-xs-12 col-sm-6 dm_intro_text"> 
+      <div class="row">
+        <div class=" col-md-6 col-md-6 dm_intro_text"> 
           
           <!-- <h1>Chào mừng bạn đến <span class="text_color">DM Computer</span></h1> -->
           <div class="intro_text_title">DM Computer - Địa chỉ sắm PC/Laptop uy tín hàng đầu Việt Nam!</div>
@@ -32,28 +36,24 @@
             <li><i class="fa fa-arrow-right"></i>&nbsp; <a href="#">Lorem Ipsum generators on the Internet tend to repeat predefined.</a></li>
           </ul> -->
         </div>
-        <div class="col-xs-12 col-sm-6">
-          <div class="single-img-add sidebar-add-slider">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel"> 
-              
-              <!-- Wrapper for slides -->
-              <div class="carousel-inner" role="listbox">
+        <div class=" col-md-5 col-md-6">
+          <div class="">
+
                 <div class="item active"> <img src="../../assets/images/banghieiu.jpg" alt="slide1"> </div>
                 <!-- <div class="item"> <img src="./../assets/images/about_us_slide2.jpg" alt="slide2"> </div>
                 <div class="item"> <img src="./../assets/images/about_us_slide3.jpg" alt="slide3"> </div> -->
               </div>
-            </div>
-          </div>
+           
         </div>
       </div>
-
+    </div>
   </div>
   <!-- Section: services -->
   <section id="service" class="text-center"> 
     
    
     
-    <div class="container">
+    <!-- <div class="container">
      
       <div class="row">
         <div class="col-sm-3 col-md-3">
@@ -101,14 +101,11 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </section>
   <!-- /Section: services --> 
-  <div class="our-team"> 
-
-    
+  <!-- <div class="our-team"> 
    
-      
     <div class="container"> <div class="page-header">
         <h2>Our Team</h2>
       </div>
@@ -159,6 +156,6 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   
