--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -66,6 +66,7 @@
           <p>
           </p>
           <div class="social">
+            <!-- Follows us! -->
             <ul class="inline-mode">
               <li class="social-network fb"><a title="Connect us on Facebook" target="_blank" href="https://www.facebook.com/dangminhpc70"><i class="fa fa-facebook"></i></a></li>
               <!-- <li class="social-network googleplus"><a title="Connect us on Google+" target="_blank" href="https://plus.google.com"><i class="fa fa-google"></i></a></li>
@@ -77,45 +78,39 @@
         </div>
         <div class="col-sm-6 col-md-2 col-xs-12 collapsed-block">
           <div class="footer-links">
-            <h3 class="links-title">Information<a class="expander visible-xs" href="#TabBlock-1">+</a></h3>
+            <h3 class="links-title">Danh mục sản phẩm<a class="expander visible-xs" href="#TabBlock-1">+</a></h3>
             <div class="tabBlock" id="TabBlock-1">
               <ul class="list-links list-unstyled">
-                <li><a href="#s">Delivery Information</a></li>
-                <li><a href="#">Discount</a></li>
-                <li><a href="sitemap.html">Sitemap</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="faq.html">FAQs</a></li>
-                <li><a href="#">Terms &amp; Condition</a></li>
+                <div *ngFor="let item of this.categories; let i = index">
+                  <li *ngIf="i <= 4"><a [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{slug: item?.urlSlug}">{{item.categoryName}}</a></li>
+                </div>
               </ul>
             </div>
           </div>
         </div>
         <div class="col-sm-3 col-md-2 col-xs-12 collapsed-block">
           <div class="footer-links">
-            <h3 class="links-title">Insider<a class="expander visible-xs" href="#TabBlock-3">+</a></h3>
+            <h3 class="links-title">  &nbsp; <a class="expander visible-xs" href="#TabBlock-3">+</a></h3>
             <div class="tabBlock" id="TabBlock-3">
               <ul class="list-links list-unstyled">
-                <li><a href="sitemap.html"> Sites Map </a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Trends</a></li>
-                <li><a href="about_us.html">About Us</a></li>
-                <li><a href="contact_us.html">Contact Us</a></li>
-                <li><a href="#">My Orders</a></li>
+                <div *ngFor="let item of this.categories; let i = index">
+                  <li *ngIf="i > 4 && i<=10"><a [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{slug: item?.urlSlug}">{{item.categoryName}}</a></li>
+                </div>
               </ul>
             </div>
           </div>
         </div>
         <div class="col-sm-3 col-md-2 col-xs-12 collapsed-block">
           <div class="footer-links">
-            <h3 class="links-title">Service<a class="expander visible-xs" href="#TabBlock-4">+</a></h3>
+            <h3 class="links-title">Thông tin<a class="expander visible-xs" href="#TabBlock-4">+</a></h3>
             <div class="tabBlock" id="TabBlock-4">
               <ul class="list-links list-unstyled">
-                <li><a href="account_page.html">Account</a></li>
-                <li><a href="wishlist.html">Wishlist</a></li>
-                <li><a href="shopping_cart.html">Shopping Cart</a></li>
-                <li><a href="#">Return Policy</a></li>
+                <li><a  [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 2}">Sản phẩm bán chạy</a></li>
+                <li><a  [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 1}">Sản phẩm giảm giá</a></li>
+                <li><a href="#">Hàng cũ - giá tốt</a></li>
+                <!-- <li><a href="#">Return Policy</a></li>
                 <li><a href="#">Special</a></li>
-                <li><a href="#">Lookbook</a></li>
+                <li><a href="#">Lookbook</a></li> -->
               </ul>
             </div>
           </div>
