--- a/src/app/menu-top/menu-top.component.html
+++ b/src/app/menu-top/menu-top.component.html
@@ -61,7 +61,7 @@
                   <div class="title title_font"><span class="title-text">Home</span></div>
                 </a></div>
             </li>
-            <li class="mt-root">
+            <!-- <li class="mt-root">
               <div class="mt-root-item"><a  href="#">
                   <div class="title title_font"><span class="title-text">Categories</span></div>
                 </a></div>
@@ -127,18 +127,18 @@
                   </ul>
                 </li>
               </ul>
-            </li>
-            <li class="mt-root">
+            </li> -->
+            <!-- <li class="mt-root">
               <div class="mt-root-item"><a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/gioi-thieu']">
                   <div class="title title_font"><span class="title-text">New Arrivals</span> </div>
                 </a></div>
-            </li>
+            </li> -->
             <li class="mt-root">
               <div class="mt-root-item"><a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/gioi-thieu']">
                   <div class="title title_font"><span class="title-text">Giới thiệu</span></div>
                 </a></div>
             </li>
-            <li class="mt-root demo_custom_link_cms">
+            <!-- <li class="mt-root demo_custom_link_cms">
               <div class="mt-root-item"><a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/tin-tuc']">
                   <div class="title title_font"><span class="title-text">Tin tức</span></div>
                 </a></div>
@@ -156,14 +156,43 @@
                   <div class="title"> <a href="blog_single_post.html"> Single post </a></div>
                 </li>
               </ul>
-            </li>
+            </li> -->
             <li class="mt-root">
               <div class="mt-root-item">
                 <div class="title title_font"><span class="title-text">Bán chạy nhất</span></div>
               </div>
               <ul class="menu-items col-xs-12" *ngIf="this.productSale">
                 <li *ngFor="let item of productSale.data; let i=  index" class="menu-item depth-1 product menucol-1-3 withimage">
-                  <div class="product-item" *ngIf="i < 3">
+                  <div class="" *ngIf="i < 3">
+                    <div class="product">
+                      <div class="percent" *ngIf="item.rateDiscount > 0"><span>-{{item.rateDiscount}}%</span></div>
+                      <div class="product__thumb"><a [routerLink]="['/chi-tiet']" (click)="handleViewDetailProduct($event,item)"
+                          class="product__link"><img [src]='urlImage + item.imageUrl' alt="{{item.productName}}"></a>
+                        <div class="pr-button-info-area">
+                            <div class="add-to-wish" style="margin-bottom: 14px;" (click)="addToFavorite(item)"> <a> <i class="fa fa-heart-o"></i> </a> </div>
+                            <div class="view-quick-view" (click)="openModalQuickView(item)"> <a> <i class="fa fa-search"></i> </a> </div>
+                        </div>
+                      </div>
+                      <div class="product__bottom">
+                        <div class="product__title"><a [routerLink]="['/chi-tiet']" (click)="handleViewDetailProduct($event,item)"
+                            class="product__link">{{item.productName}}</a></div>
+                        <div class="product__rate">
+                          <div class="rate__star" *ngIf="item?.rate >= 0">
+                            <div class="rate_item">
+                              <i class="fa fa-star yellow" *ngFor="let rate of counterRate(item?.rate)"></i>
+                              <i class="fa fa-star-o" *ngFor="let rate of counterRate(5 - item?.rate)"></i>
+                              <span class="rate__text"> &nbsp;{{item?.countRate}} đánh giá</span>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="product__price"><span class="price__selling">{{item.promotionPrice | currency: "VND" }}</span> <span
+                            class="price__old">{{item.price | currency: "VND" }}</span></div> <button type="button" (click)="addToShopingCard(item)"
+                          class="add-to-cart"><i class="fa fa-shopping-cart"></i> &nbsp;GIỎ HÀNG</button>
+                      </div>
+                    </div>
+
+
+<!-- 
                     <div class="item-inner">
                       <div class="product-thumbnail">
                         <div class="icon-sale-label sale-left">Sale</div>
@@ -176,8 +205,6 @@
                           <div class="pr-button">
                             <div class="mt-button add_to_wishlist"> <a (click)="addToFavorite(item)"> <i class="fa fa-heart"></i>
                               </a> </div>
-                            <!-- <div class="mt-button add_to_compare"> <a href="compare.html"> <i class="fa fa-signal"></i>
-                              </a> </div> -->
                             <div class="mt-button quick-view"> <a (click)="openModalQuickView(item)"> <i class="fa fa-search"></i>
                               </a> </div>
                           </div>
@@ -188,7 +215,6 @@
                           <div class="item-title"> <a title="{{item.productName}}" [routerLink]="['/chi-tiet']">{{item.productName}} </a> </div>
                           <div class="item-content">
                             <div class="rating"> 
-                              <!-- Tạo sao đánh giá -->
                               <ng-container *ngIf="item.rate >= 0">
                                 <i class="fa fa-star" *ngFor="let rate of counterRate(item.rate)"></i>
                                 <i class="fa fa-star-o" *ngFor="let rate of counterRate(5 - item.rate)"></i>
@@ -204,10 +230,21 @@
                           </div>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                 </li>               
               </ul>
+            </li>
+
+            <li class="mt-root item-fb" href="https://www.facebook.com/dangminhpc70">
+              <div class="mt-root-item" >
+                <a class="social" title="Connect us on Facebook" target="_blank" href="https://www.facebook.com/dangminhpc70"><i class="fa fa-facebook"></i></a>
+              </div>
+            </li>
+            <li class="mt-root  item-shoppe" href="https://www.facebook.com/dangminhpc70">
+              <div class="mt-root-item item-root-shoppe" >
+                <a title="Connect us on Shopee" target="_blank" href="https://shopee.vn/shop/1023848407/"><img src="../assets/images/shopee-xanh.png" alt=""></a>
+              </div>
             </li>
             <li></li>
           </ul>
