--- a/src/app/shopping-cart/shopping-cart.component.css
+++ b/src/app/shopping-cart/shopping-cart.component.css
@@ -114,7 +114,13 @@
     font-size: 14px;
     -webkit-text-decoration-line: underline;
     text-decoration-line: underline;
-    color: #197bb7;
+    color: #197bb7;.cart .cart-products .cart-p-item .cart-p-img {
+    overflow: hidden;
+    width: 80px;
+    margin-right: 20px;
+    height: auto
+}
+
     margin-left: 30px
 }
 
@@ -258,8 +264,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 22px;
-    width: 22px;
+    height: 20px;
+    width: 20px;
     background: #dddfe6;
     cursor: pointer
 }
@@ -330,7 +336,7 @@
     justify-content: center;
     color: #197bb7;
     font-weight: 700;
-    font-size: 13px
+    font-size: 10px
 }
 
 .cart .cart-products.inline .cart-p-remove svg {
@@ -648,13 +654,17 @@
 }
 
 
+.no-item-cart{
+    margin-bottom: 15px;
+    font-size: 14px;
+}
 
 /**/
 
 @media screen and (max-width: 740px) {
     .cart .cart-products .cart-process .process span {
         font-weight: 400;
-        font-size: 13px;
+        font-size: 12px;
         color: #4e4e54;
         padding: 7px 0;
         transform: skewX(20deg)
@@ -713,7 +723,7 @@
         justify-content: center;
         color: #197bb7;
         font-weight: 600;
-        font-size: 12px
+        font-size: 10px
     }
     
     
@@ -751,4 +761,12 @@
     position: absolute;
     top: calc(50% - 3.0px)
     }
+
+    .cart .cart-products .cart-p-item .cart-p-img {
+        overflow: hidden;
+        width: 80px;
+        margin-right: 10px;
+        height: auto
+    }
+    
 }
