--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -44,7 +44,7 @@
                 </a>
               </div> -->
             </div> <!----><!---->
-            <div *ngIf="getItemCart().length == 0">Bạn đang không có sản phẩm nào trong giỏ hàng.</div>
+            <div class="no-item-cart" *ngIf="getItemCart().length == 0">Bạn đang không có sản phẩm nào trong giỏ hàng.</div>
             <div class="cart-p-item" *ngFor="let item of getItemCart()">
               <div class="cart-p-img"><img
                   [src]='urlImg + item.image'
