--- a/src/app/menu-top/menu-top.component.html
+++ b/src/app/menu-top/menu-top.component.html
@@ -128,11 +128,11 @@
                 </li>
               </ul>
             </li> -->
-            <!-- <li class="mt-root">
-              <div class="mt-root-item"><a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/gioi-thieu']">
-                  <div class="title title_font"><span class="title-text">New Arrivals</span> </div>
+            <li class="mt-root">
+              <div class="mt-root-item"><a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/xay-dung-cau-hinh']">
+                  <div class="title title_font"><span class="title-text"><i class="fa fa-cog"></i> &nbsp; Xây dựng cấu hình</span> </div>
                 </a></div>
-            </li> -->
+            </li>
             <li class="mt-root">
               <div class="mt-root-item"><a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/gioi-thieu']">
                   <div class="title title_font"><span class="title-text">Giới thiệu</span></div>
