--- a/src/assets/css/blog.css
+++ b/src/assets/css/blog.css
@@ -1,7 +1,7 @@
 /*  ################################################################
 
   File Name: blog.css
-  Template Name: ShopMart
+  Template Name: DM Computer
   Created By: justthemevalley 
 
  
