--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -71,8 +71,15 @@
           
           <p>
           </p>
-          <div class="social">        
-            <ul class="inline-mode">
+          <div class="footer-links">        
+            <ul class="list-links list-unstyled">
+              <li>Phone 1: 0978 691 194</li>
+              <li>Phone 2: 0908 708 294</li>
+              <li>STK sử dụng giao dịch: </li>
+              <li>  12456789 – Vietcombank – TEST</li>
+              <li>  123456789 – Techcombank – TEST</li>
+
+ 
               <!-- <li class="social-network fb"><a title="Connect us on Facebook" target="_blank" href="https://www.facebook.com/dangminhpc70"><i class="fa fa-facebook"></i></a></li> -->
               <!-- <li class="social-network googleplus"><a title="Connect us on Google+" target="_blank" href="https://plus.google.com"><i class="fa fa-google"></i></a></li>
               <li class="social-network tw"><a title="Connect us on Twitter" target="_blank" href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
@@ -117,7 +124,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-3 col-xs-12 collapsed-block">
+        <div class="col-sm-6 col-md-4 col-xs-12 collapsed-block">
           <div class="footer-links">
             <h3 class="links-title">Working hours<a class="expander visible-xs" href="#TabBlock-5">+</a></h3>
             <div class="tabBlock" id="TabBlock-5">
