--- a/src/assets/css/shortcodes/shortcodes.css
+++ b/src/assets/css/shortcodes/shortcodes.css
@@ -1,7 +1,7 @@
 /*  ################################################################
 
   File Name: shortcodes.css
-  Template Name: ShopMart
+  Template Name: DM Computer
   Created By: justthemevalley 
 
  
